added watch service